--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                     <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
                 </svg>
             </div>
+            <span class="Youtube">Youtube</span>
         </div>
-        <div class="nav-center"></div>
-        <div class="nav-right"></div>
+        <div class="nav-center">center</div>
+        <div class="nav-right">right</div>
     </nav>
 
 </body>
